--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,33 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
   <link rel="stylesheet" href="/dist/output.css">
   <title>Frontend Mentor | QR code component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
-<body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+<body class="bg-lightGray grid h-screen place-items-center">
+  <div class="w-[375px] p-5 rounded-2xl bg-customWhite">
+    <div class="pb-5">
+      <img class="rounded-2xl" src="/images/image-qr-code.png" alt="QR">
+    </div>
+    <div class="w-[85%] text-center m-auto pb-5">
+      <h1 class="font-outfit font-bold text-2xl text-darkBlue pb-5">Improve your front-end skills by building projects
+      </h1>
+      <p class="font-outfit text-grayishBlue">Scan the QR code to visit Frontend Mentor and take your coding skills to
+        the
+        next level</p>
+    </div>
   </div>
+
+
+
+
+
+  <!-- <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>.
+    Coded by <a href="#">Lazar Stojanović</a>.
+  </div> -->
 </body>
 
 </html>
