--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
-  <link rel="stylesheet" href="/dist/output.css">
+  <link rel="icon" type="image/x-icon" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./dist/output.css">
   <title>Frontend Mentor | QR code component</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
