--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-lightGray grid h-screen place-items-center">
   <div class="w-[375px] p-5 rounded-2xl bg-customWhite">
     <div class="pb-5">
-      <img class="rounded-2xl" src="/images/image-qr-code.png" alt="QR">
+      <img class="rounded-2xl" src="./images/image-qr-code.png" alt="QR">
     </div>
     <div class="w-[85%] text-center m-auto pb-5">
       <h1 class="font-outfit font-bold text-2xl text-darkBlue pb-5">Improve your front-end skills by building projects
